pixman : update to 0.27.2

--- a/packages/pixman/build
+++ b/packages/pixman/build
@@ -2,6 +2,8 @@
 
 . config/options
 
+get_meta $1
+
 if [ "$TARGET_ARCH" = arm ]; then
   [ "$FPU_OPTIMIZATIONS" = "neon" ] && CFG_NEON="--enable-arm-neon" || CFG_NEON="--disable-arm-neon"
   ARCH_CONFIG="--disable-mmx --disable-sse2 --disable-vmx --enable-arm-simd --disable-arm-iwmmxt $CFG_NEON "
@@ -13,7 +15,7 @@ else
   ARCH_CONFIG="--disable-mmx --disable-sse2 --disable-vmx --disable-arm-simd --disable-arm-neon"
 fi
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
 
 echo "" > test/Makefile.am
 do_autoconf
