mesa-demos : build and install glxgears

--- a/packages/mesa-demos/build
+++ b/packages/mesa-demos/build
@@ -4,8 +4,9 @@
 
 cd $BUILD/$1*
 do_configure
-make -C src/xdemos glxinfo LDFLAGS="$LDFLAGS -lstdc++"
+make -C src/xdemos glxinfo glxgears LDFLAGS="$LDFLAGS -lstdc++"
 rm -rf .install
 mkdir -p .install/usr/bin
 cp -P src/xdemos/glxinfo .install/usr/bin
+cp -P src/xdemos/glxgears .install/usr/bin
 strip_bins .install
