installator : fix for - could not open framebuffer - issue after install

--- a/packages/installator/config/syslinux.cfg
+++ b/packages/installator/config/syslinux.cfg
@@ -18,13 +18,13 @@ LABEL geexbox
   MENU LABEL Start DISTRO ...
   MENU DEFAULT
   KERNEL /boot/vmlinuz
-  APPEND initrd=/boot/initrd root=UUID=ID_FS_UUID rootfs=flat quiet loglevel=3 rw
+  APPEND initrd=/boot/initrd root=UUID=ID_FS_UUID rootfs=flat vga=795 quiet loglevel=3 rw
 
 MENU SEPARATOR
 
 LABEL debug
   MENU LABEL Start in debugging mode ...
   KERNEL /boot/vmlinuz
-  APPEND initrd=/boot/initrd root=UUID=ID_FS_UUID rootfs=flat emergency
+  APPEND initrd=/boot/initrd root=UUID=ID_FS_UUID rootfs=flat vga=795 emergency
 
 F1 help.msg #00000000
