lirc : restore service for specific remotes

--- a/packages/eventlircd/unit/eventlircd.service
+++ b/packages/eventlircd/unit/eventlircd.service
@@ -2,6 +2,7 @@
 Description=Eventlircd daemon
 After=systemd-udevd.service
 Before=xorg.service
+ConditionPathExists=!/etc/lirc/mycustom.conf
 
 [Service]
 EnvironmentFile=/etc/eventlircd.conf
