libcec : add support for cubox (patches by Rudi)

--- a/packages/libcec/build
+++ b/packages/libcec/build
@@ -6,7 +6,7 @@ get_meta $1
 cd $PKG_BUILD_DIR
 
 autoreconf -vif
-do_configure
+[ "$TARGET_MACHINE" = cubox ] && do_configure --enable-cubox --with-nxp-toolkit-path=$(kernel_path)/drivers/video/dovefb/nxp_hdmi || do_configure
 
 make
 make_install
