grub-efi : remove legacy vga kernel arg

--- a/packages/grub-efi/config/grub.cfg
+++ b/packages/grub-efi/config/grub.cfg
@@ -15,7 +15,7 @@ then
 fi
 
 menuentry "Start distro-name release-nr" {
-  linux /vmlinuz extra_cmdline_params vga=789 persistent quiet splash loglevel=3 boot=casper
+  linux /vmlinuz extra_cmdline_params persistent quiet splash loglevel=3 boot=casper
   initrd /initrd
 }
 #INS#menuentry "Install distro-name release-nr" {
