cubox : update boot.cfg for the new upcoming Installer provided by Solidrun (patch by Rabeeh Khoury)

--- a/config/platforms/arm/armada5xx/boot.cfg
+++ b/config/platforms/arm/armada5xx/boot.cfg
@@ -1,6 +1,16 @@
-echo ======== Setting bootargs ========
-setenv bootargs 'console=ttyS0,115200n8 vmalloc=448M root=/dev/mmcblk0p2 video=dovefb:lcd0:1920x1080-32@60-edid clcd.lcd0_enable=1 clcd.lcd1_enable=0'
-echo ======== Loading kernel ========
-ext2load mmc 0:1 0x00200000 /uImage
+echo ======== Setting bootargs and loading kernel ========
+ext4ls mmc 0:2 /
+if itest.s $? -eq 0; then
+   echo "Detected two partitions config (ext2/ext4)"
+   setenv boot_device /dev/mmcblk0p2
+   ext2load mmc 0:1 0x00200000 /uImage
+else
+   echo "Detected one partition config (ext4)"
+   setenv boot_device /dev/mmcblk0p1
+   ext4load mmc 0:1 0x00200000 /boot/uImage
+fi
+     
+setenv bootargs console=ttyS0,115200n8 vmalloc=448M root=$boot_device video=dovefb:lcd0:1920x1080-32@60-edid clcd.lcd0_enable=1 clcd.lcd1_enable=0
 echo ======== Booting kernel ========
 bootm
+
