i2c-tools: strip executables

--- a/packages/i2c-tools/build
+++ b/packages/i2c-tools/build
@@ -5,4 +5,12 @@
 cd $BUILD/$1*
 
 make
+make strip
 make_install
+
+mkdir -p .install/usr/sbin
+for f in i2cdump i2cget i2cset i2cdetect;
+do
+  cp -p .install/usr/local/sbin/$f .install/usr/sbin
+done
+
