--- a/packages/taglib/build
+++ b/packages/taglib/build
@@ -1,10 +1,11 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 require_cxx $1
-
-cd $BUILD/$1*
 
 setup_toolchain target
 cmake  \
