rtorrent : build with xmlrpc-c

--- a/packages/rtorrent/config/rtorrent.rc
+++ b/packages/rtorrent/config/rtorrent.rc
@@ -100,3 +100,5 @@ peer_exchange = yes
 # before forcing. Overworked systems might need lower values to get a
 # decent hash checking rate.
 #hash_max_tries = 10
+
+scgi_port = localhost:5000
