--- a/packages/ffmpeg/build
+++ b/packages/ffmpeg/build
@@ -1,6 +1,7 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
 if pkg_uses $1 vdpau; then
   VDPAU_CONFIG="--enable-vdpau"
@@ -32,7 +33,8 @@ else
   FPU_CONFIG="--disable-neon"
 fi
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
+
 do_gcc_strip_lto
 do_gcc_strip_gold
 ./configure --enable-cross-compile \
