mpfr : update to 3.1.1

--- a/packages/mpfr/build
+++ b/packages/mpfr/build
@@ -2,9 +2,12 @@
 
 . config/options
 
+get_meta $1
+
+cd $PKG_BUILD_DIR
+
 setup_toolchain host
 
-cd $BUILD/$1*
 mkdir -p objdir
 cd objdir
 ../configure --host=$HOST_NAME \
