patch : update to 2.7.1

--- a/packages/patch/build
+++ b/packages/patch/build
@@ -1,11 +1,17 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 setup_toolchain host
 
-cd $BUILD/$1*
-./configure --host=$HOST_NAME \
-            --build=$HOST_NAME \
+./configure \
+	--host=$HOST_NAME \
+	--build=$HOST_NAME \
+	--prefix=/
+	
 
 make
+make_install
