update defconfig for cubox

--- a/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
+++ b/config/defconfigs/geexbox-xbmc-armada5xx-cubox.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120710-r14678"
+CONFIG_KERNELVERSION="devel-20120923-r15063"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -274,6 +274,7 @@ CONFIG_PKG_parted=y
 #
 # CONFIG_PKG_firmware-arm-imx5 is not set
 # CONFIG_PKG_firmware-arm-imx6 is not set
+# CONFIG_PKG_firmware-arm-ipu-dce is not set
 # CONFIG_PKG_firmware-arm-raspberrypi is not set
 # CONFIG_PKG_firmware-arm-syslink-ipc is not set
 # CONFIG_PKG_firmware-arm-syslink-mm is not set
@@ -497,6 +498,7 @@ CONFIG_PKG_libmodplug=y
 CONFIG_PKG_libmpeg2=y
 # CONFIG_OPT_libmpeg2_xorg is not set
 # CONFIG_OPT_libmpeg2_sdl is not set
+CONFIG_PKG_libmusicbrainz=y
 CONFIG_PKG_libmysqlclient=y
 # CONFIG_PKG_libnfnetlink is not set
 # CONFIG_PKG_libnfo is not set
@@ -523,7 +525,7 @@ CONFIG_PKG_libpng=y
 CONFIG_PKG_libsamplerate=y
 # CONFIG_PKG_libshairport is not set
 # CONFIG_PKG_libshout is not set
-# CONFIG_PKG_libsigc is not set
+CONFIG_PKG_libsigc=y
 CONFIG_PKG_libsmbclient=y
 CONFIG_PKG_libsndfile=y
 # CONFIG_PKG_libsoup is not set
@@ -531,6 +533,7 @@ CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 CONFIG_PKG_libtheora=y
+CONFIG_PKG_libtorrent=y
 CONFIG_PKG_libungif=y
 CONFIG_PKG_libusb=y
 CONFIG_PKG_libusb-compat=y
@@ -555,8 +558,9 @@ CONFIG_PKG_mesa=y
 # CONFIG_PKG_mtdev is not set
 # CONFIG_PKG_mx is not set
 CONFIG_PKG_ncurses=y
-# CONFIG_OPT_ncurses_terminfo is not set
+CONFIG_OPT_ncurses_terminfo=y
 # CONFIG_PKG_ncursesw is not set
+CONFIG_PKG_neon=y
 CONFIG_PKG_nettle=y
 CONFIG_PKG_openssl=y
 CONFIG_PKG_orc=y
@@ -571,6 +575,7 @@ CONFIG_PKG_pcre=y
 # CONFIG_PKG_qt-qmf is not set
 # CONFIG_PKG_readline is not set
 # CONFIG_PKG_rest is not set
+CONFIG_PKG_rtorrent=y
 CONFIG_PKG_sg3-utils=y
 CONFIG_OPT_sg3utils_devtools=y
 # CONFIG_PKG_smpeg is not set
@@ -602,6 +607,7 @@ CONFIG_PKG_tinyxml=y
 CONFIG_PKG_v4l-utils=y
 CONFIG_PKG_vmeta=y
 CONFIG_PKG_wavpack=y
+CONFIG_PKG_xmlrpc-c=y
 CONFIG_PKG_yajl=y
 CONFIG_PKG_zlib=y
 # CONFIG_PKG_zvbi is not set
@@ -1028,7 +1034,7 @@ CONFIG_PKG_extra-fonts-nonfree=y
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
-# CONFIG_PKG_screen is not set
+CONFIG_PKG_screen=y
 # CONFIG_PKG_snowball-mactool is not set
 CONFIG_PKG_strace=m
 # CONFIG_PKG_tools-generator is not set
