--- a/config/defconfigs/geexbox-freevo-i386-generic.conf
+++ b/config/defconfigs/geexbox-freevo-i386-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120730-r14886"
+CONFIG_KERNELVERSION="devel-20120923-r15063"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -123,9 +123,9 @@ CONFIG_OPT_TARGET_ISO=y
 # CONFIG_OPT_TARGET_INITRAMFS is not set
 CONFIG_OPT_PACKAGE_REPO=y
 # CONFIG_TIMEZONE is not set
-CONFIG_KEYMAP_QWERTY=y
-# CONFIG_KEYMAP_AZERTY is not set
-# CONFIG_KEYMAP_QWERTZ is not set
+CONFIG_KEYMAP_US=y
+# CONFIG_KEYMAP_FR is not set
+# CONFIG_KEYMAP_DE is not set
 CONFIG_OPT_SUB_CHARSET="en"
 CONFIG_LOCALE=y
 CONFIG_OPT_INCLUDED_LOCALES="en_US.UTF-8"
@@ -293,6 +293,7 @@ CONFIG_PKG_fuse=y
 # CONFIG_PKG_fuse-exfat is not set
 # CONFIG_PKG_fuseiso is not set
 # CONFIG_PKG_gnu-fdisk is not set
+# CONFIG_PKG_mpd is not set
 # CONFIG_PKG_mtd-utils is not set
 CONFIG_PKG_nfs-utils=y
 CONFIG_PKG_ntfs-3g=y
@@ -302,7 +303,7 @@ CONFIG_PKG_ntfs-3g=y
 #
 # firmware
 #
-# CONFIG_PKG_firmware-arm-raspberrypi is not set
+# CONFIG_PKG_cec-firmware-upgrade is not set
 # CONFIG_PKG_firmware-bluetooth-bluez is not set
 # CONFIG_PKG_firmware-dvb-af9015 is not set
 # CONFIG_PKG_firmware-dvb-avertv-a800 is not set
@@ -521,6 +522,7 @@ CONFIG_PKG_libmodplug=y
 CONFIG_PKG_libmpeg2=y
 # CONFIG_OPT_libmpeg2_xorg is not set
 # CONFIG_OPT_libmpeg2_sdl is not set
+# CONFIG_PKG_libmusicbrainz is not set
 CONFIG_PKG_libmysqlclient=y
 # CONFIG_PKG_libnfnetlink is not set
 # CONFIG_PKG_libnfo is not set
@@ -533,6 +535,7 @@ CONFIG_PKG_libnl=y
 CONFIG_PKG_libogg=y
 # CONFIG_PKG_liboil is not set
 # CONFIG_PKG_libosip2 is not set
+# CONFIG_PKG_libpbc is not set
 # CONFIG_PKG_libpcap is not set
 # CONFIG_PKG_libpcd is not set
 # CONFIG_PKG_libplist is not set
@@ -554,6 +557,7 @@ CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 CONFIG_PKG_libtheora=y
+# CONFIG_PKG_libtorrent is not set
 CONFIG_PKG_libungif=y
 CONFIG_PKG_libusb=y
 CONFIG_PKG_libusb-compat=y
@@ -584,6 +588,7 @@ CONFIG_OPT_mesa_vdpau=y
 CONFIG_PKG_ncurses=y
 CONFIG_OPT_ncurses_terminfo=y
 # CONFIG_PKG_ncursesw is not set
+# CONFIG_PKG_neon is not set
 CONFIG_PKG_nettle=y
 CONFIG_PKG_openssl=y
 # CONFIG_PKG_orc is not set
@@ -598,6 +603,7 @@ CONFIG_PKG_pcre=y
 # CONFIG_PKG_qt-qmf is not set
 CONFIG_PKG_readline=y
 # CONFIG_PKG_rest is not set
+# CONFIG_PKG_rtorrent is not set
 # CONFIG_PKG_sg3-utils is not set
 CONFIG_PKG_smpeg=y
 CONFIG_OPT_smpeg_xorg=y
@@ -627,6 +633,7 @@ CONFIG_PKG_tiff=y
 # CONFIG_PKG_v4l-utils is not set
 # CONFIG_PKG_vmeta is not set
 CONFIG_PKG_wavpack=y
+# CONFIG_PKG_xmlrpc-c is not set
 CONFIG_PKG_yajl=y
 CONFIG_PKG_zlib=y
 # CONFIG_PKG_zvbi is not set
@@ -634,26 +641,34 @@ CONFIG_PKG_zlib=y
 #
 # misc
 #
+# CONFIG_PKG_alsacap is not set
 # CONFIG_PKG_baresip is not set
+# CONFIG_PKG_chrpath is not set
 # CONFIG_PKG_elfutils is not set
 # CONFIG_PKG_ethtool is not set
+# CONFIG_PKG_evemu is not set
 # CONFIG_PKG_glmark2 is not set
+# CONFIG_PKG_hiawatha is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libcheck is not set
 # CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_nbench is not set
+# CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
 # CONFIG_PKG_rsync is not set
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_usbhubctrl is not set
 # CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
 # CONFIG_PKG_weston is not set
+# CONFIG_PKG_yavta is not set
 
 #
 # multimedia
@@ -705,6 +720,7 @@ CONFIG_PKG_libva=y
 # CONFIG_PKG_libvalhalla is not set
 CONFIG_PKG_libvdpau=y
 CONFIG_PKG_livepause=y
+# CONFIG_PKG_media-ctl is not set
 # CONFIG_PKG_mex is not set
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
@@ -720,6 +736,7 @@ CONFIG_PKG_livepause=y
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
 # CONFIG_PKG_vdr-dummydevice is not set
+# CONFIG_PKG_vdr-dvbapi is not set
 # CONFIG_PKG_vdr-dvbsddevice is not set
 # CONFIG_PKG_vdr-dvd is not set
 # CONFIG_PKG_vdr-dynamite is not set
@@ -766,6 +783,7 @@ CONFIG_PKG_livepause=y
 # CONFIG_PKG_vlc is not set
 # CONFIG_PKG_xbmc is not set
 # CONFIG_PKG_xbmc-addon-vdr is not set
+# CONFIG_PKG_xbmc-addon-vuplus is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
@@ -1039,6 +1057,7 @@ CONFIG_PKG_wscan=y
 # CONFIG_PKG_xbmc-addon-bluecop is not set
 # CONFIG_PKG_xbmc-addon-geexbox-network is not set
 # CONFIG_PKG_xbmc-addon-geexbox-updater is not set
+# CONFIG_PKG_xbmc-addon-navi-x is not set
 # CONFIG_PKG_xdotool is not set
 # CONFIG_PKG_xvattr is not set
 
@@ -1110,8 +1129,6 @@ CONFIG_PKG_xf86-video-nv=y
 CONFIG_PKG_xf86-video-nvidia=y
 CONFIG_OPT_xf86videonvidia_vdpau=y
 # CONFIG_PKG_xf86-video-nvidia-legacy is not set
-# CONFIG_PKG_xf86-video-nvidia-old is not set
-# CONFIG_PKG_xf86-video-nvidia-very-old is not set
 CONFIG_PKG_xf86-video-openchrome=y
 # CONFIG_PKG_xf86-video-r128 is not set
 # CONFIG_PKG_xf86-video-s3 is not set
@@ -1136,7 +1153,7 @@ CONFIG_OPT_FPU_OPTIMIZATIONS="no"
 CONFIG_OPT_TOOLCHAIN_TYPE="openbricks"
 CONFIG_OPT_COMPRESSION_METHOD="xz"
 CONFIG_OPT_TARGET_LIBC="eglibc"
-CONFIG_OPT_KEYMAP="qwerty"
+CONFIG_OPT_KEYMAP="us"
 CONFIG_OPT_EGL_PROVIDER="mesa"
 CONFIG_OPT_GLES_PROVIDER="mesa"
 CONFIG_OPT_NETWORK_BACKEND="connman"
