--- a/config/defconfigs/base-omap4-pandaboard.conf
+++ b/config/defconfigs/base-omap4-pandaboard.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120730-r14886"
+CONFIG_KERNELVERSION="devel-20120923-r15063"
 CONFIG_MODULES=y
 CONFIG_FLAVOUR_base=y
 # CONFIG_FLAVOUR_geexbox is not set
@@ -103,9 +103,9 @@ CONFIG_OPT_TARGET_OMAP_TARBALL=y
 # CONFIG_OPT_TARGET_INITRAMFS is not set
 # CONFIG_OPT_PACKAGE_REPO is not set
 # CONFIG_TIMEZONE is not set
-CONFIG_KEYMAP_QWERTY=y
-# CONFIG_KEYMAP_AZERTY is not set
-# CONFIG_KEYMAP_QWERTZ is not set
+CONFIG_KEYMAP_US=y
+# CONFIG_KEYMAP_FR is not set
+# CONFIG_KEYMAP_DE is not set
 # CONFIG_LOCALE is not set
 
 #
@@ -227,7 +227,7 @@ CONFIG_OPT_TELNET_SERVER=y
 #
 # CONFIG_PKG_acx is not set
 # CONFIG_PKG_ar6k is not set
-# CONFIG_PKG_cryptodev is not set
+CONFIG_PKG_cryptodev=y
 # CONFIG_PKG_cwiid is not set
 # CONFIG_PKG_eventlircd is not set
 # CONFIG_PKG_lirc is not set
@@ -247,6 +247,7 @@ CONFIG_OPT_TELNET_SERVER=y
 # CONFIG_PKG_fuse-exfat is not set
 # CONFIG_PKG_fuseiso is not set
 # CONFIG_PKG_gnu-fdisk is not set
+# CONFIG_PKG_mpd is not set
 # CONFIG_PKG_mtd-utils is not set
 # CONFIG_PKG_nfs-utils is not set
 # CONFIG_PKG_ntfs-3g is not set
@@ -256,7 +257,6 @@ CONFIG_OPT_TELNET_SERVER=y
 #
 # firmware
 #
-# CONFIG_PKG_firmware-arm-raspberrypi is not set
 # CONFIG_PKG_firmware-dvb-dvbsky-S9xx is not set
 # CONFIG_PKG_firmware-dvb-tevii is not set
 # CONFIG_PKG_firmware-graphics-nouveau is not set
@@ -343,8 +343,8 @@ CONFIG_PKG_expat=y
 # CONFIG_PKG_gdk-pixbuf is not set
 CONFIG_PKG_gettext=y
 # CONFIG_PKG_glibmm is not set
-# CONFIG_PKG_gmp is not set
-# CONFIG_PKG_gnutls is not set
+CONFIG_PKG_gmp=y
+CONFIG_PKG_gnutls=y
 # CONFIG_PKG_grilo is not set
 # CONFIG_PKG_grilo-plugins is not set
 # CONFIG_PKG_gssdp is not set
@@ -406,6 +406,7 @@ CONFIG_PKG_libffi=y
 # CONFIG_PKG_libmms is not set
 # CONFIG_PKG_libmodplug is not set
 # CONFIG_PKG_libmpeg2 is not set
+# CONFIG_PKG_libmusicbrainz is not set
 # CONFIG_PKG_libmysqlclient is not set
 # CONFIG_PKG_libnfnetlink is not set
 # CONFIG_PKG_libnfo is not set
@@ -418,6 +419,7 @@ CONFIG_PKG_libffi=y
 # CONFIG_PKG_libogg is not set
 # CONFIG_PKG_liboil is not set
 # CONFIG_PKG_libosip2 is not set
+# CONFIG_PKG_libpbc is not set
 # CONFIG_PKG_libpcap is not set
 # CONFIG_PKG_libpcd is not set
 # CONFIG_PKG_libplist is not set
@@ -439,6 +441,7 @@ CONFIG_PKG_libffi=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 # CONFIG_PKG_libtheora is not set
+# CONFIG_PKG_libtorrent is not set
 # CONFIG_PKG_libungif is not set
 CONFIG_PKG_libusb=y
 CONFIG_PKG_libusb-compat=y
@@ -457,7 +460,8 @@ CONFIG_PKG_libusb-compat=y
 # CONFIG_PKG_mx is not set
 # CONFIG_PKG_ncurses is not set
 # CONFIG_PKG_ncursesw is not set
-# CONFIG_PKG_nettle is not set
+# CONFIG_PKG_neon is not set
+CONFIG_PKG_nettle=y
 # CONFIG_PKG_openssl is not set
 # CONFIG_PKG_orc is not set
 # CONFIG_PKG_ortp is not set
@@ -471,6 +475,7 @@ CONFIG_PKG_pciids=y
 # CONFIG_PKG_qt-qmf is not set
 # CONFIG_PKG_readline is not set
 # CONFIG_PKG_rest is not set
+# CONFIG_PKG_rtorrent is not set
 # CONFIG_PKG_sg3-utils is not set
 # CONFIG_PKG_smpeg is not set
 # CONFIG_PKG_sofia-sip is not set
@@ -497,6 +502,7 @@ CONFIG_PKG_pciids=y
 # CONFIG_PKG_v4l-utils is not set
 # CONFIG_PKG_vmeta is not set
 # CONFIG_PKG_wavpack is not set
+# CONFIG_PKG_xmlrpc-c is not set
 # CONFIG_PKG_yajl is not set
 CONFIG_PKG_zlib=y
 # CONFIG_PKG_zvbi is not set
@@ -504,28 +510,36 @@ CONFIG_PKG_zlib=y
 #
 # misc
 #
+# CONFIG_PKG_alsacap is not set
 # CONFIG_PKG_baresip is not set
+# CONFIG_PKG_chrpath is not set
 # CONFIG_PKG_cpuburn is not set
 # CONFIG_PKG_elfutils is not set
 # CONFIG_PKG_ethtool is not set
+# CONFIG_PKG_evemu is not set
 # CONFIG_PKG_glmark2 is not set
 # CONFIG_PKG_hdmiservice is not set
+# CONFIG_PKG_hiawatha is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libcheck is not set
 # CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_nbench is not set
+# CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
 # CONFIG_PKG_rsync is not set
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_usbhubctrl is not set
 # CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
 # CONFIG_PKG_weston is not set
+# CONFIG_PKG_yavta is not set
 
 #
 # multimedia
@@ -567,6 +581,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_libvdpau is not set
 # CONFIG_PKG_livepause is not set
 # CONFIG_PKG_mali400 is not set
+# CONFIG_PKG_media-ctl is not set
 # CONFIG_PKG_mex is not set
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
@@ -585,6 +600,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
 # CONFIG_PKG_vdr-dummydevice is not set
+# CONFIG_PKG_vdr-dvbapi is not set
 # CONFIG_PKG_vdr-dvbsddevice is not set
 # CONFIG_PKG_vdr-dvd is not set
 # CONFIG_PKG_vdr-dynamite is not set
@@ -631,6 +647,7 @@ CONFIG_PKG_zlib=y
 # CONFIG_PKG_vlc is not set
 # CONFIG_PKG_xbmc is not set
 # CONFIG_PKG_xbmc-addon-vdr is not set
+# CONFIG_PKG_xbmc-addon-vuplus is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
@@ -884,6 +901,7 @@ CONFIG_PKG_usbutils=y
 # CONFIG_PKG_xbmc-addon-bluecop is not set
 # CONFIG_PKG_xbmc-addon-geexbox-network is not set
 # CONFIG_PKG_xbmc-addon-geexbox-updater is not set
+# CONFIG_PKG_xbmc-addon-navi-x is not set
 # CONFIG_PKG_xdotool is not set
 # CONFIG_PKG_xvattr is not set
 
@@ -963,5 +981,5 @@ CONFIG_OPT_FPU_OPTIMIZATIONS="neon"
 CONFIG_OPT_TOOLCHAIN_TYPE="linaro"
 CONFIG_OPT_COMPRESSION_METHOD="gzip"
 CONFIG_OPT_TARGET_LIBC="eglibc"
-CONFIG_OPT_KEYMAP="qwerty"
+CONFIG_OPT_KEYMAP="us"
 CONFIG_OPT_NETWORK_BACKEND="connman"
