--- a/config/defconfigs/geexbox-xbmc-i386-generic.conf
+++ b/config/defconfigs/geexbox-xbmc-i386-generic.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120710-r14678"
+CONFIG_KERNELVERSION="devel-20120923-r15063"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -521,6 +521,7 @@ CONFIG_PKG_libmodplug=y
 CONFIG_PKG_libmpeg2=y
 # CONFIG_OPT_libmpeg2_xorg is not set
 # CONFIG_OPT_libmpeg2_sdl is not set
+CONFIG_PKG_libmusicbrainz=m
 CONFIG_PKG_libmysqlclient=y
 # CONFIG_PKG_libnfnetlink is not set
 # CONFIG_PKG_libnfo is not set
@@ -547,7 +548,7 @@ CONFIG_PKG_libpng=y
 CONFIG_PKG_libsamplerate=y
 CONFIG_PKG_libshairport=y
 # CONFIG_PKG_libshout is not set
-# CONFIG_PKG_libsigc is not set
+CONFIG_PKG_libsigc=m
 CONFIG_PKG_libsmbclient=y
 CONFIG_PKG_libsndfile=y
 # CONFIG_PKG_libsoup is not set
@@ -555,6 +556,7 @@ CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 # CONFIG_PKG_libtheora is not set
+CONFIG_PKG_libtorrent=m
 CONFIG_PKG_libungif=y
 CONFIG_PKG_libusb=y
 CONFIG_PKG_libusb-compat=y
@@ -585,6 +587,7 @@ CONFIG_OPT_mesa_xvmc=y
 CONFIG_PKG_ncurses=y
 # CONFIG_OPT_ncurses_terminfo is not set
 CONFIG_PKG_ncursesw=y
+CONFIG_PKG_neon=m
 CONFIG_PKG_nettle=y
 CONFIG_PKG_openssl=y
 # CONFIG_PKG_orc is not set
@@ -599,6 +602,7 @@ CONFIG_PKG_pcre=y
 # CONFIG_PKG_qt-qmf is not set
 CONFIG_PKG_readline=y
 # CONFIG_PKG_rest is not set
+CONFIG_PKG_rtorrent=m
 CONFIG_PKG_sg3-utils=y
 CONFIG_OPT_sg3utils_devtools=y
 # CONFIG_PKG_smpeg is not set
@@ -627,6 +631,7 @@ CONFIG_PKG_tinyxml=y
 CONFIG_PKG_v4l-utils=y
 # CONFIG_PKG_vmeta is not set
 CONFIG_PKG_wavpack=y
+CONFIG_PKG_xmlrpc-c=m
 CONFIG_PKG_yajl=y
 CONFIG_PKG_zlib=y
 # CONFIG_PKG_zvbi is not set
@@ -1059,7 +1064,7 @@ CONFIG_PKG_nano=y
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
-# CONFIG_PKG_screen is not set
+CONFIG_PKG_screen=m
 # CONFIG_PKG_strace is not set
 # CONFIG_PKG_tools-generator is not set
 # CONFIG_PKG_unrar is not set
