--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120710-r14678"
+CONFIG_KERNELVERSION="devel-20120923-r15063"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -280,6 +280,7 @@ CONFIG_PKG_parted=y
 #
 # CONFIG_PKG_firmware-arm-imx5 is not set
 # CONFIG_PKG_firmware-arm-imx6 is not set
+CONFIG_PKG_firmware-arm-ipu-dce=y
 # CONFIG_PKG_firmware-arm-raspberrypi is not set
 CONFIG_PKG_firmware-arm-syslink-ipc=y
 CONFIG_OPT_firmwarearmsyslinkipc_devtools=y
@@ -504,6 +505,7 @@ CONFIG_PKG_libmodplug=y
 CONFIG_PKG_libmpeg2=y
 # CONFIG_OPT_libmpeg2_xorg is not set
 # CONFIG_OPT_libmpeg2_sdl is not set
+CONFIG_PKG_libmusicbrainz=m
 CONFIG_PKG_libmysqlclient=y
 # CONFIG_PKG_libnfnetlink is not set
 # CONFIG_PKG_libnfo is not set
@@ -530,7 +532,7 @@ CONFIG_PKG_libpng=y
 CONFIG_PKG_libsamplerate=y
 # CONFIG_PKG_libshairport is not set
 # CONFIG_PKG_libshout is not set
-# CONFIG_PKG_libsigc is not set
+CONFIG_PKG_libsigc=m
 CONFIG_PKG_libsmbclient=y
 # CONFIG_PKG_libsndfile is not set
 # CONFIG_PKG_libsoup is not set
@@ -538,6 +540,7 @@ CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 # CONFIG_PKG_libtheora is not set
+CONFIG_PKG_libtorrent=m
 CONFIG_PKG_libungif=y
 CONFIG_PKG_libusb=y
 CONFIG_PKG_libusb-compat=y
@@ -564,6 +567,7 @@ CONFIG_PKG_mesa=y
 CONFIG_PKG_ncurses=y
 # CONFIG_OPT_ncurses_terminfo is not set
 CONFIG_PKG_ncursesw=y
+CONFIG_PKG_neon=m
 CONFIG_PKG_nettle=y
 CONFIG_PKG_openssl=y
 CONFIG_PKG_orc=y
@@ -578,6 +582,7 @@ CONFIG_PKG_pcre=y
 # CONFIG_PKG_qt-qmf is not set
 # CONFIG_PKG_readline is not set
 # CONFIG_PKG_rest is not set
+CONFIG_PKG_rtorrent=m
 CONFIG_PKG_sg3-utils=y
 CONFIG_OPT_sg3utils_devtools=y
 # CONFIG_PKG_smpeg is not set
@@ -609,6 +614,7 @@ CONFIG_PKG_tinyxml=y
 CONFIG_PKG_v4l-utils=y
 # CONFIG_PKG_vmeta is not set
 CONFIG_PKG_wavpack=y
+CONFIG_PKG_xmlrpc-c=m
 CONFIG_PKG_yajl=y
 CONFIG_PKG_zlib=y
 # CONFIG_PKG_zvbi is not set
@@ -644,7 +650,7 @@ CONFIG_OPT_pvr_vdr=y
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
 # CONFIG_PKG_usbhubctrl is not set
-# CONFIG_PKG_wayland is not set
+CONFIG_PKG_wayland=y
 # CONFIG_PKG_webrtc-audio-processing is not set
 # CONFIG_PKG_weston is not set
 # CONFIG_PKG_yavta is not set
@@ -1046,7 +1052,7 @@ CONFIG_PKG_extra-fonts-nonfree=y
 CONFIG_PKG_omapdrmtest=y
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
-# CONFIG_PKG_screen is not set
+CONFIG_PKG_screen=m
 # CONFIG_PKG_snowball-mactool is not set
 # CONFIG_PKG_strace is not set
 # CONFIG_PKG_tools-generator is not set
