--- a/config/defconfigs/geexbox-xbmc-ux500-snowball-v5.conf
+++ b/config/defconfigs/geexbox-xbmc-ux500-snowball-v5.conf
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # OpenBricks Configuration
 #
-CONFIG_KERNELVERSION="devel-20120730-r14886"
+CONFIG_KERNELVERSION="devel-20120923-r15063"
 CONFIG_MODULES=y
 # CONFIG_FLAVOUR_base is not set
 CONFIG_FLAVOUR_geexbox=y
@@ -109,9 +109,9 @@ CONFIG_OPT_TARGET_TARBALL=y
 CONFIG_OPT_TARGET_SNOWBALL_EMMC=y
 CONFIG_OPT_PACKAGE_REPO=y
 # CONFIG_TIMEZONE is not set
-CONFIG_KEYMAP_QWERTY=y
-# CONFIG_KEYMAP_AZERTY is not set
-# CONFIG_KEYMAP_QWERTZ is not set
+CONFIG_KEYMAP_US=y
+# CONFIG_KEYMAP_FR is not set
+# CONFIG_KEYMAP_DE is not set
 CONFIG_LOCALE=y
 CONFIG_OPT_INCLUDED_LOCALES="en_US.UTF-8"
 CONFIG_OPT_DEFAULT_LOCALE="en_US.UTF-8"
@@ -263,6 +263,7 @@ CONFIG_PKG_fuse=y
 # CONFIG_PKG_fuse-exfat is not set
 # CONFIG_PKG_fuseiso is not set
 # CONFIG_PKG_gnu-fdisk is not set
+CONFIG_PKG_mpd=m
 # CONFIG_PKG_mtd-utils is not set
 CONFIG_PKG_nfs-utils=y
 CONFIG_PKG_ntfs-3g=y
@@ -274,6 +275,7 @@ CONFIG_PKG_ntfs-3g=y
 #
 # CONFIG_PKG_firmware-arm-imx5 is not set
 # CONFIG_PKG_firmware-arm-imx6 is not set
+# CONFIG_PKG_firmware-arm-ipu-dce is not set
 # CONFIG_PKG_firmware-arm-raspberrypi is not set
 # CONFIG_PKG_firmware-arm-syslink-ipc is not set
 # CONFIG_PKG_firmware-arm-syslink-mm is not set
@@ -496,6 +498,7 @@ CONFIG_PKG_libmodplug=y
 CONFIG_PKG_libmpeg2=y
 # CONFIG_OPT_libmpeg2_xorg is not set
 # CONFIG_OPT_libmpeg2_sdl is not set
+CONFIG_PKG_libmusicbrainz=m
 CONFIG_PKG_libmysqlclient=y
 # CONFIG_PKG_libnfnetlink is not set
 # CONFIG_PKG_libnfo is not set
@@ -508,6 +511,7 @@ CONFIG_PKG_libnl=y
 CONFIG_PKG_libogg=y
 # CONFIG_PKG_liboil is not set
 # CONFIG_PKG_libosip2 is not set
+# CONFIG_PKG_libpbc is not set
 # CONFIG_PKG_libpcap is not set
 # CONFIG_PKG_libpcd is not set
 CONFIG_PKG_libplist=y
@@ -521,14 +525,15 @@ CONFIG_PKG_libpng=y
 CONFIG_PKG_libsamplerate=y
 # CONFIG_PKG_libshairport is not set
 # CONFIG_PKG_libshout is not set
-# CONFIG_PKG_libsigc is not set
+CONFIG_PKG_libsigc=m
 CONFIG_PKG_libsmbclient=y
-# CONFIG_PKG_libsndfile is not set
+CONFIG_PKG_libsndfile=m
 # CONFIG_PKG_libsoup is not set
 CONFIG_PKG_libssh=y
 # CONFIG_PKG_libsvg is not set
 # CONFIG_PKG_libtelepathy is not set
 # CONFIG_PKG_libtheora is not set
+CONFIG_PKG_libtorrent=m
 CONFIG_PKG_libungif=y
 CONFIG_PKG_libusb=y
 CONFIG_PKG_libusb-compat=y
@@ -552,8 +557,10 @@ CONFIG_OPT_mesa_openvg=y
 # CONFIG_OPT_mesa_wayland is not set
 # CONFIG_PKG_mtdev is not set
 # CONFIG_PKG_mx is not set
-# CONFIG_PKG_ncurses is not set
+CONFIG_PKG_ncurses=m
+CONFIG_OPT_ncurses_terminfo=y
 # CONFIG_PKG_ncursesw is not set
+CONFIG_PKG_neon=m
 CONFIG_PKG_nettle=y
 CONFIG_PKG_openssl=y
 CONFIG_PKG_orc=y
@@ -568,6 +575,7 @@ CONFIG_PKG_pcre=y
 # CONFIG_PKG_qt-qmf is not set
 # CONFIG_PKG_readline is not set
 # CONFIG_PKG_rest is not set
+CONFIG_PKG_rtorrent=m
 # CONFIG_PKG_sg3-utils is not set
 # CONFIG_PKG_smpeg is not set
 # CONFIG_PKG_sofia-sip is not set
@@ -598,6 +606,7 @@ CONFIG_PKG_tinyxml=y
 CONFIG_PKG_v4l-utils=y
 # CONFIG_PKG_vmeta is not set
 CONFIG_PKG_wavpack=y
+CONFIG_PKG_xmlrpc-c=m
 CONFIG_PKG_yajl=y
 CONFIG_PKG_zlib=y
 # CONFIG_PKG_zvbi is not set
@@ -605,28 +614,36 @@ CONFIG_PKG_zlib=y
 #
 # misc
 #
+# CONFIG_PKG_alsacap is not set
 # CONFIG_PKG_baresip is not set
+# CONFIG_PKG_chrpath is not set
 # CONFIG_PKG_cpuburn is not set
 # CONFIG_PKG_elfutils is not set
 # CONFIG_PKG_ethtool is not set
+# CONFIG_PKG_evemu is not set
 # CONFIG_PKG_glmark2 is not set
 CONFIG_PKG_hdmiservice=y
+# CONFIG_PKG_hiawatha is not set
 # CONFIG_PKG_iioutils is not set
+# CONFIG_PKG_libcheck is not set
 # CONFIG_PKG_libxkbcommon is not set
 # CONFIG_PKG_linphone is not set
 # CONFIG_PKG_madplay is not set
 # CONFIG_PKG_maliit-framework is not set
 # CONFIG_PKG_maliit-plugins is not set
 # CONFIG_PKG_nbench is not set
+# CONFIG_PKG_patchelf is not set
 # CONFIG_PKG_powerdebug is not set
 # CONFIG_PKG_powertop is not set
 # CONFIG_PKG_pvr is not set
 # CONFIG_PKG_rsync is not set
 # CONFIG_PKG_stream is not set
 # CONFIG_PKG_uci is not set
+# CONFIG_PKG_usbhubctrl is not set
 # CONFIG_PKG_wayland is not set
 # CONFIG_PKG_webrtc-audio-processing is not set
 # CONFIG_PKG_weston is not set
+# CONFIG_PKG_yavta is not set
 
 #
 # multimedia
@@ -670,6 +687,7 @@ CONFIG_OPT_libbluray_aacs=y
 # CONFIG_PKG_libvdpau is not set
 # CONFIG_PKG_livepause is not set
 CONFIG_PKG_mali400=y
+# CONFIG_PKG_media-ctl is not set
 # CONFIG_PKG_mex is not set
 # CONFIG_PKG_mythplugins is not set
 # CONFIG_PKG_myththemes is not set
@@ -689,6 +707,7 @@ CONFIG_PKG_mali400=y
 # CONFIG_PKG_vdr-avards is not set
 # CONFIG_PKG_vdr-devstatus is not set
 # CONFIG_PKG_vdr-dummydevice is not set
+# CONFIG_PKG_vdr-dvbapi is not set
 # CONFIG_PKG_vdr-dvbsddevice is not set
 # CONFIG_PKG_vdr-dvd is not set
 # CONFIG_PKG_vdr-dynamite is not set
@@ -762,6 +781,7 @@ CONFIG_OPT_xbmc_xorg=y
 CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
 # CONFIG_PKG_xbmc-addon-vdr is not set
+CONFIG_PKG_xbmc-addon-vuplus=y
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
@@ -1009,7 +1029,7 @@ CONFIG_PKG_util-linux-ng=y
 # CONFIG_PKG_omapdrmtest is not set
 # CONFIG_PKG_oprofile is not set
 CONFIG_PKG_rtmpdump=y
-# CONFIG_PKG_screen is not set
+CONFIG_PKG_screen=m
 # CONFIG_PKG_snowball-mactool is not set
 # CONFIG_PKG_strace is not set
 # CONFIG_PKG_tools-generator is not set
@@ -1023,6 +1043,7 @@ CONFIG_OPT_usbutils_devtools=y
 CONFIG_PKG_xbmc-addon-bluecop=y
 CONFIG_PKG_xbmc-addon-geexbox-network=y
 CONFIG_PKG_xbmc-addon-geexbox-updater=y
+CONFIG_PKG_xbmc-addon-navi-x=y
 # CONFIG_PKG_xdotool is not set
 # CONFIG_PKG_xvattr is not set
 
@@ -1104,7 +1125,7 @@ CONFIG_OPT_FPU_OPTIMIZATIONS="neon"
 CONFIG_OPT_TOOLCHAIN_TYPE="linaro"
 CONFIG_OPT_COMPRESSION_METHOD="gzip"
 CONFIG_OPT_TARGET_LIBC="eglibc"
-CONFIG_OPT_KEYMAP="qwerty"
+CONFIG_OPT_KEYMAP="us"
 CONFIG_OPT_EGL_PROVIDER="mali"
 CONFIG_OPT_GLES_PROVIDER="mali"
 CONFIG_OPT_OVG_PROVIDER="mali"
