libdrm : update to 2.4.39

--- a/packages/libdrm/build
+++ b/packages/libdrm/build
@@ -1,6 +1,7 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
 
 drm_add_driver () {
   pkg_uses $1 $2 && \
@@ -15,7 +16,7 @@ drm_add_driver $1 vmwgfx  vmwgfx-experimental-api
 drm_add_driver $1 glamo glamo-experimental-api
 drm_add_driver $1 omap omap-experimental-api
 
-cd $BUILD/$1*
+cd $PKG_BUILD_DIR
 
 do_autoconf
 
