util-linux-ng : update to 2.22

--- a/packages/util-linux-ng/build
+++ b/packages/util-linux-ng/build
@@ -15,8 +15,13 @@ cd objdir-host
 setup_toolchain host
 do_configure host \
             --without-ncurses \
+            --without-selinux \
             --disable-tls \
             --disable-wall \
+            --disable-login \
+            --disable-sulogin \
+            --disable-su \
+
 
 make
 make_install toolchain
@@ -28,7 +33,11 @@ cd objdir-target
 setup_toolchain target
 do_configure target \
             --without-ncurses \
+            --without-selinux \
             --disable-wall \
+            --disable-login \
+            --disable-sulogin \
+            --disable-su \
             $TLS_CONFIG \
 
 make
