sqlite : update to 3.7.14.1

--- a/packages/sqlite/build
+++ b/packages/sqlite/build
@@ -1,10 +1,12 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 local_cflags="-fno-fast-math"
 
-cd $BUILD/$1*
 do_configure \
             --disable-readline \
             --enable-threadsafe \
