dbus-glib : update to 0.100

--- a/packages/dbus-glib/build
+++ b/packages/dbus-glib/build
@@ -1,12 +1,13 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 export ac_cv_have_abstract_sockets=yes
 export ac_cv_func_posix_getpwnam_r=yes
 export have_abstract_sockets=yes
-
-cd $BUILD/$1*
 
 mkdir -p objdir-host
 cd objdir-host
