font-util : update to 1.3.0

--- a/packages/font-util/build
+++ b/packages/font-util/build
@@ -1,10 +1,12 @@
 #!/bin/sh
 
 . config/options
+get_meta $1
+
+cd $PKG_BUILD_DIR
 
 setup_toolchain host
 
-cd $BUILD/$1*
 ./configure --host=$HOST_NAME \
             --prefix=/usr \
             --with-mapdir=$XORG_PATH_MAPS
