update configfile for omap4

--- a/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
+++ b/config/defconfigs/geexbox-xbmc-omap4-pandaboard.conf
@@ -111,7 +111,9 @@ CONFIG_OPT_TARGET_OMAP_TARBALL=y
 # CONFIG_OPT_TARGET_EXT2FS is not set
 # CONFIG_OPT_TARGET_INITRAMFS is not set
 CONFIG_OPT_PACKAGE_REPO=y
-# CONFIG_TIMEZONE is not set
+CONFIG_TIMEZONE=y
+CONFIG_OPT_INCLUDED_TIMEZONES="all"
+CONFIG_OPT_TIMEZONE=""
 # CONFIG_KEYMAP_US is not set
 CONFIG_KEYMAP_FR=y
 # CONFIG_KEYMAP_DE is not set
@@ -806,6 +808,7 @@ CONFIG_OPT_xbmc_sdl=y
 CONFIG_OPT_xbmc_alsa=y
 CONFIG_PKG_xbmc-addon-vdr=y
 CONFIG_PKG_xbmc-addon-vuplus=y
+# CONFIG_PKG_xbmc-pvr-addons is not set
 # CONFIG_PKG_xine-bluray is not set
 # CONFIG_PKG_xine-lib is not set
 # CONFIG_PKG_xine-ui is not set
@@ -1020,7 +1023,7 @@ CONFIG_PKG_polkit=y
 CONFIG_PKG_systemd=y
 CONFIG_OPT_systemd_devtools=y
 CONFIG_OPT_SYSTEMD=y
-# CONFIG_PKG_timezone-data is not set
+CONFIG_PKG_timezone-data=y
 CONFIG_PKG_toolchain=y
 # CONFIG_PKG_uclibc is not set
 # CONFIG_PKG_uclibc-gdb is not set
