revert last commit

--- a/packages/xbmc/build
+++ b/packages/xbmc/build
@@ -2,9 +2,6 @@
 
 . config/options
 
-get_meta swig
-SWIG_VER=$PKG_VERSION
-
 get_meta $1
 
 export MAKEFLAGS=-j2
@@ -76,10 +73,6 @@ export PYTHON_SITE_PKG=$LIB_PREFIX/lib/python2.7/site-packages
 export PYTHON_EXTRA_LIBS="-lpthread -ldl -lutil"
 export PYTHON_EXTRA_LDFLAGS="-Xlinker -export-dynamic"
 
-export ac_cv_path_JAVA_EXE="/usr/bin/java"
-export TAGLIB_CFLAGS="$CFLAGS"
-export SWIG_LIB=$ROOT/$TOOLCHAIN/share/swig/$SWIG_VER
-
 cd $PKG_BUILD_DIR
 
 touch .dummy.in
@@ -131,10 +124,10 @@ make xbmc-xrandr
 make_install
 
 if [ "$TARGET_ARCH" = arm ]; then
-  # workaround to make the addons run
-  ln -sf /usr/lib/xbmc/addons/library.xbmc.addon/libXBMC_addon-arm.so .install/usr/lib/xbmc/addons/library.xbmc.addon/libXBMC_addon-arm-linux.so
-  ln -sf /usr/lib/xbmc/addons/library.xbmc.gui/libXBMC_gui-arm.so .install/usr/lib/xbmc/addons/library.xbmc.gui/libXBMC_gui-arm-linux.so
-  ln -sf /usr/lib/xbmc/addons/library.xbmc.pvr/libXBMC_pvr-arm.so .install/usr/lib/xbmc/addons/library.xbmc.pvr/libXBMC_pvr-arm-linux.so
+  # workaround to make the addons run - optional
+  ln -sf /usr/lib/xbmc/addons/library.xbmc.addon/libXBMC_addon-arm.so .install/usr/lib/xbmc/addons/library.xbmc.addon/libXBMC_addon-arm-linux.so || true
+  ln -sf /usr/lib/xbmc/addons/library.xbmc.gui/libXBMC_gui-arm.so .install/usr/lib/xbmc/addons/library.xbmc.gui/libXBMC_gui-arm-linux.so || true
+  ln -sf /usr/lib/xbmc/addons/library.xbmc.pvr/libXBMC_pvr-arm.so .install/usr/lib/xbmc/addons/library.xbmc.pvr/libXBMC_pvr-arm-linux.so || true
 fi
 
 for i in .install/usr/lib/xbmc/system/players/dvdplayer/*; do
