swig : fix build

--- a/packages/swig/build
+++ b/packages/swig/build
@@ -5,6 +5,7 @@ get_meta $1
 
 cd $PKG_BUILD_DIR
 
+export PCRE_CONFIG=$ROOT/$TOOLCHAIN/bin/pcre-config-host
 do_configure host \
 	--with-pcre-prefix=$ROOT/$TOOLCHAIN \
 	--without-x \
@@ -31,7 +32,5 @@ do_configure host \
 	--without-go \
 	--without-d \
 
-	
-
 make
-make_install
+make_install toolchain
