Build libmiscgen.so for vmeta hardfp
The libmiscgen.so binary that comes with the marvell-ipp is softfp. Rebuild that binary to get the hardfp version

--- a/packages/marvell-ipp/build
+++ b/packages/marvell-ipp/build
@@ -13,3 +13,13 @@ if [ "$ARM_HARDFLOAT_ABI" = yes ] ; then
   cp lib-hard/*.so* .install/usr/lib
 fi
 
+## rebuild libmiscgen.so ...
+cd example/misc/build/wmmx2_linux
+export MY_PATH_GNU_BIN=$ROOT/$TOOLCHAIN/bin 
+export MY_TOOLCHAIN_PREFIX=$TARGET_NAME 
+export MY_CFLAGS="-mcpu=cortex-a9"
+export MAKEFLAGS=-j1
+make -f makefile_miscGen
+cd -
+
+cp lib/libmiscgen.so .install/usr/lib
