remove unneeded codecs for cubox (patch by Rudi)

--- a/config/platforms/arm/armada5xx/linux.conf
+++ b/config/platforms/arm/armada5xx/linux.conf
@@ -2228,93 +2228,8 @@ CONFIG_SND_KIRKWOOD_SOC=y
 CONFIG_SND_KIRKWOOD_SOC_I2S=y
 CONFIG_SND_KIRKWOOD_SOC_SPDIF=y
 CONFIG_SND_SOC_I2C_AND_SPI=y
-CONFIG_SND_SOC_ALL_CODECS=y
-CONFIG_SND_SOC_WM_HUBS=y
-CONFIG_SND_SOC_AD1836=y
-CONFIG_SND_SOC_AD193X=y
-CONFIG_SND_SOC_AD73311=y
-CONFIG_SND_SOC_ADAU1373=y
-CONFIG_SND_SOC_ADAV80X=y
-CONFIG_SND_SOC_ADS117X=y
-CONFIG_SND_SOC_AK4104=y
-CONFIG_SND_SOC_AK4535=y
-CONFIG_SND_SOC_AK4641=y
-CONFIG_SND_SOC_AK4642=y
-CONFIG_SND_SOC_AK4671=y
-CONFIG_SND_SOC_ALC5623=y
-CONFIG_SND_SOC_ALC5632=y
-CONFIG_SND_SOC_CS42L51=y
-CONFIG_SND_SOC_CS42L52=y
-CONFIG_SND_SOC_CS42L73=y
-CONFIG_SND_SOC_CS4270=y
-CONFIG_SND_SOC_CS4271=y
-CONFIG_SND_SOC_CX20442=y
-CONFIG_SND_SOC_JZ4740_CODEC=y
-CONFIG_SND_SOC_L3=y
-CONFIG_SND_SOC_DA7210=y
-CONFIG_SND_SOC_DFBMCS320=y
-CONFIG_SND_SOC_LM49453=y
-CONFIG_SND_SOC_MAX98088=y
-CONFIG_SND_SOC_MAX98095=y
-CONFIG_SND_SOC_MAX9850=y
-CONFIG_SND_SOC_PCM3008=y
-CONFIG_SND_SOC_RT5631=y
-CONFIG_SND_SOC_SGTL5000=y
+# CONFIG_SND_SOC_ALL_CODECS is not set
 CONFIG_SND_SOC_SPDIF=y
-CONFIG_SND_SOC_SSM2602=y
-CONFIG_SND_SOC_STA32X=y
-CONFIG_SND_SOC_TLV320AIC23=y
-CONFIG_SND_SOC_TLV320AIC26=y
-CONFIG_SND_SOC_TLV320AIC32X4=y
-CONFIG_SND_SOC_TLV320AIC3X=y
-CONFIG_SND_SOC_TLV320DAC33=y
-CONFIG_SND_SOC_UDA134X=y
-CONFIG_SND_SOC_UDA1380=y
-CONFIG_SND_SOC_WM1250_EV1=y
-CONFIG_SND_SOC_WM2000=y
-CONFIG_SND_SOC_WM2200=y
-CONFIG_SND_SOC_WM5100=y
-CONFIG_SND_SOC_WM8510=y
-CONFIG_SND_SOC_WM8523=y
-CONFIG_SND_SOC_WM8580=y
-CONFIG_SND_SOC_WM8711=y
-CONFIG_SND_SOC_WM8727=y
-CONFIG_SND_SOC_WM8728=y
-CONFIG_SND_SOC_WM8731=y
-CONFIG_SND_SOC_WM8737=y
-CONFIG_SND_SOC_WM8741=y
-CONFIG_SND_SOC_WM8750=y
-CONFIG_SND_SOC_WM8753=y
-CONFIG_SND_SOC_WM8770=y
-CONFIG_SND_SOC_WM8776=y
-CONFIG_SND_SOC_WM8782=y
-CONFIG_SND_SOC_WM8804=y
-CONFIG_SND_SOC_WM8900=y
-CONFIG_SND_SOC_WM8903=y
-CONFIG_SND_SOC_WM8904=y
-CONFIG_SND_SOC_WM8940=y
-CONFIG_SND_SOC_WM8955=y
-CONFIG_SND_SOC_WM8960=y
-CONFIG_SND_SOC_WM8961=y
-CONFIG_SND_SOC_WM8962=y
-CONFIG_SND_SOC_WM8971=y
-CONFIG_SND_SOC_WM8974=y
-CONFIG_SND_SOC_WM8978=y
-CONFIG_SND_SOC_WM8983=y
-CONFIG_SND_SOC_WM8985=y
-CONFIG_SND_SOC_WM8988=y
-CONFIG_SND_SOC_WM8990=y
-CONFIG_SND_SOC_WM8991=y
-CONFIG_SND_SOC_WM8993=y
-CONFIG_SND_SOC_WM8995=y
-CONFIG_SND_SOC_WM8996=y
-CONFIG_SND_SOC_WM9081=y
-CONFIG_SND_SOC_WM9090=y
-CONFIG_SND_SOC_LM4857=y
-CONFIG_SND_SOC_MAX9768=y
-CONFIG_SND_SOC_MAX9877=y
-CONFIG_SND_SOC_ML26124=y
-CONFIG_SND_SOC_TPA6130A2=y
 # CONFIG_SND_SIMPLE_CARD is not set
 # CONFIG_SOUND_PRIME is not set
 
