gstreamer : bump version to 1.0 (patch by Ben)

--- a/packages/gstreamer/build
+++ b/packages/gstreamer/build
@@ -23,4 +23,4 @@ make
 make_install
 
 sed -i "s%^pluginsdir=.*%pluginsdir=/usr/lib/gstreamer-$GST_VERSION%" \
-  .install/usr/lib/pkgconfig/gstreamer-0.10.pc
+  .install/usr/lib/pkgconfig/gstreamer-${GST_VERSION}.pc
