gst-plugins-base : bump version to 1.0.1 (patch by Ben)

--- a/packages/gst-plugins-base/build
+++ b/packages/gst-plugins-base/build
@@ -25,6 +25,11 @@ do_configure \
             --disable-rpath \
             $DEBUG_CONFIG \
             --disable-gtk-doc \
+            --disable-gtk-doc-html \
+            --disable-gtk-doc-pdf \
+            --enable-silent-rules \
+            --disable-examples \
+            --disable-fatal-warnings \
             --enable-orc \
             --disable-adder \
             --enable-app \
@@ -43,7 +48,6 @@ do_configure \
             --enable-videoscale \
             --enable-volume \
             $XORG_CONFIG \
-            --disable-gst_v4l \
             --enable-alsa \
             --disable-cdparanoia \
             --disable-gnome_vfs \
