firmware-arm-imx6 : bump version to 12.08.00 (patch by Ben)

--- a/packages/firmware-arm-imx6/build
+++ b/packages/firmware-arm-imx6/build
@@ -7,3 +7,4 @@ cd $BUILD/$1*
 rm -rf .install
 mkdir -p .install/firmware/vpu
 cp -a firmware/vpu/vpu_fw_imx6q.bin .install/firmware/vpu
+cp -a firmware/vpu/vpu_fw_imx6d.bin .install/firmware/vpu
