add new defconfig : geexbox-xbmc-imx6-sabrelite

--- a/packages/linux-headers/build
+++ b/packages/linux-headers/build
@@ -8,7 +8,8 @@ $SCRIPTS/unpack linux
 [ $TARGET_ARCH = powerpc -o $TARGET_ARCH = powerpc64 ] && TARGET_ARCH=powerpc
 
 cd $(kernel_path)
-make ARCH=$TARGET_ARCH headers_check
+[ "$TARGET_PLATFORM" != imx6 ] && \
+  make ARCH=$TARGET_ARCH headers_check
 make ARCH=$TARGET_ARCH INSTALL_HDR_PATH=headers headers_install
 
 mkdir -p headers/.install/usr/usr/include
@@ -20,7 +21,7 @@ if [ "$TARGET_PLATFORM" = omap3 -o "$TARGET_PLATFORM" = omap4 ]; then
   sed -i "s%__user%%g" headers/.install/usr/usr/include/asm/arch-omap/omapfb.h
 fi
 
-if [ "$TARGET_PLATFORM" = imx5x ]; then
+if [ "$TARGET_PLATFORM" = imx5x -o "$TARGET_PLATFORM" = imx6 ]; then
   cp -P include/linux/ipu.h headers/.install/usr/usr/include/linux
   cp -P include/linux/mxc*.h headers/.install/usr/usr/include/linux
 fi
